--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/d-c-k/portfolio_react.git",
+  "homepage": "https://d-c-k.github.io/portfolio_react/",
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
